# chat.rs

./: Cargo.toml
src/: app.rs  http.rs  main.rs
src/state/: chat.rs  create_account.rs  login.rs  mod.rs
src/task/: accept_invite_contact_task.rs  create_account_task.rs  fetch_chat_messages.rs  fetch_contact_data_task.rs  login_task.rs  mod.rs  search_user_task.rs  send_invite_contact_task.rs
src/thread/: http_thread.rs  mod.rs  websocket_thread.rs
src/util/: encryption.rs  keyring_handler.rs  mod.rs
