[package]
name = "nossochat_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
eframe = "0.32.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10.9"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_json = "1.0.142"
tungstenite = "0.27.0"
http = "1.3.1"
